# ROS2-TurtleBot3-Training

./: .gitignore  LICENSE  README.md  useful_cmd.txt
aruco-essentials/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
aruco-essentials/aruco_essentials/: uvc_camera_node.py
aruco-essentials/src/: logitech_node.cpp  realsense_aruco_node.cpp
camera_calibration_pkg/: package.xml  setup.cfg  setup.py
camera_calibration_pkg/config/: ost.txt  ost.yaml
camera_calibration_pkg/launch/: camera_calibration.launch.py
camera_service/: package.xml  setup.py
camera_service/camera_service/: aruco_detection_node.py
final_assessment/: package.xml  setup.py
final_assessment/final_assessment/: final_assessment_template.py
image_viewer/: package.xml  setup.py
image_viewer/image_viewer/: view_image.py
log/: latest_list
marker-msgs/: CMakeLists.txt  README.md  package.xml
marker-msgs/msg/: MarkerPoint.msg  MarkerPose.msg  MarkerPoseArray.msg
marker-msgs/srv/: FindAstarPath.srv  Navigate.srv
marker_msgs/action/: NavigateToMarker.action
marker_msgs/msg/: MarkerPointArray.msg
object_spawner/: package.xml  setup.py
object_spawner/object_spawner/: object_spawner_node.py  object_spawner_node_template.py
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/srv/: GetObjectLocation.srv
rosi_bringup/: CMakeLists.txt  package.xml
rosi_bringup/launch/: rosi_bringup.launch.py
rosi_msgs/: CMakeLists.txt  package.xml
rosi_msgs/msg/: MyInterface.msg  SimpleVelocity.msg
rosi_msgs/srv/: GetObjectLocation.srv
simple_cpp_package/: CMakeLists.txt  package.xml
simple_cpp_package/src/: custom_control_robot.cpp  custom_send_twist_msg.cpp  final_assessment.cpp  image_subscriber.cpp  move_robot.cpp  simple_publisher.cpp  simple_subscriber.cpp  simple_velocity_pub_node.cpp
simple_python_package/: package.xml  setup.py
simple_python_package/simple_python_package/: aruco_detection_node.py  example_node.py  final_assessment.py  image_subscriber.py  object_spawner_node.py  publish_camera.py  simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py  simple_velocity_pub_node.py  teleop.py
simple_velocity_msg/: CMakeLists.txt  package.xml
tb3_nav2_commander/: CMakeLists.txt  package.xml
tb3_nav2_commander/tb3_nav2_commander/: nav2_commander.py
