<?xml version="1.0"?>
<package format="3">
  <name>aruco_essentials</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rosi@todo.todo">rosi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>realsense2</depend>
  <depend>opencv4</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>marker_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
